# rehome-kb-platform

./: .gitignore  .sops.yaml  CLAUDE-REVIEWER.md  CLAUDE.md  README.md  docker-compose.kb-local.yml
backend/: Dockerfile  Dockerfile.indexer  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260512_014421_initial_articles.py  20260512_115839_idempotency_keys.py  20260512_160000_chat_sessions_messages.py  20260512_170000_chat_escalations.py  20260513_010000_webhooks.py  20260513_030000_audit_log.py  20260513_040000_article_embeddings.py  20260514_020000_vault_foundation.py  20260514_030000_hr_foundation.py  20260514_040000_premises_search_vector.py  20260517_020000_premises_collaborators.py  20260517_040000_vault_wraps_multi_user.py  20260518_020000_service_orders.py  20260519_010000_kb_users.py  20260520_010000_security_incidents.py  20260521_010000_personal_data_requests.py  20260524_010000_vault_fido2_credentials.py  20260524_020000_vault_fido2_challenges.py  20260525_010000_categories_archived_at.py  20260525_010000_vault_emergency_access.py  20260525_020000_outbox.py  20260526_010000_audit_log_keyset_index.py  20260526_020000_articles_tags_lowercase.py  20260528_010000_article_questions.py  20260529_010000_article_question_embeddings.py  20260529_020000_chat_unanswered_queries.py
backend/scripts/: README.md  backfill_qa_embeddings.py  import_kb_articles.py  import_kb_documents.py  import_kb_markdown.py  reindex_articles.py  seed_kb_categories.py  seed_rehome_faq.py
backend/scripts/seed/: README.md  reHome_KB_master_v6.5.md  reHome_KB_master_v6.7.md
infra/: Makefile  (+2 more)
(+580 files in other folders)
